fixed overflow issue by adding site-wrapper

--- a/home-page/home-page.css
+++ b/home-page/home-page.css
@@ -49,19 +49,19 @@ ul {
 
 
 /**************** 
-MAIN
+    MAIN
 *****************/
 body {
-    padding: 4.6rem 0 0 0;
     font-family:         'Kumbh Sans', sans-serif;
+    position:            relative;
     overflow-x:          hidden;
     background-color:    #fafafa;
-    position:            relative;
 }
 
-.header {
-    overflow-x: hidden;
+.site-wrapper {
     position: relative;
+    overflow-x: hidden;
+    padding: 4.6rem 0 0 0;
 }
 
 .container {
@@ -70,19 +70,19 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-    body {
+    .site-wrapper {
         padding: 7.2rem 0 0 0;
     }
-    
+
     .container {
         max-width: 68.9rem;
     }
 }
 
 @media screen and (min-width: 1440px) {
-    body {
+    .site-wrapper {
         padding: 8.1rem 0 0 0;
-        
+
     }
     
     .container {
@@ -95,7 +95,7 @@ body {
 
 
 /**************** 
-LOGO + BG PATTERN
+    LOGO + BG PATTERN
 *****************/
 .block {
     padding:        0 2.4rem;
@@ -118,7 +118,7 @@ LOGO + BG PATTERN
     .block, .block--dark {
         padding: 0 3.9rem;
     }
-    
+
     .block--dark {
         margin-top: 63.9rem;
         background-size: 145rem;
@@ -158,8 +158,8 @@ LOGO + BG PATTERN
     position:    absolute;
     height:      45.8rem;
     width:       45.8rem;
-    top:         6rem;   
-    left:        180px;
+    top:         6rem;  
+    left:        50%; 
     transform:   translate(-50%, -50%);
     z-index:     -10;
 }
@@ -177,7 +177,7 @@ LOGO + BG PATTERN
         height:  66.6rem;
         width:   66.6rem;
         top:     17rem;
-        left:    92%;
+        left:    95%;
         right:   0;
     }
 }
